Backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shilamurti-deploy-backend
  namespace: shilamurti-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shilamurti-backend-label
  template:
    metadata:
      labels:
        app: shilamurti-backend-label
    spec:
      containers:
        - name: shilamurti-backend-container
          image: asia-southeast1-docker.pkg.dev/shilamurti/shilamurti/backend:12
          ports:
            - containerPort: 80 
          resources:
            requests:
              cpu: "750m"
              memory: "750Mi"
            limits:
              cpu: "1500m"
              memory: "1500Mi"
