Backend/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: backend
spec:
  parentRefs:
    - name: ecommerce-gateway
      namespace: default
  hostnames:
    - medusa.storefront.com
  rules:
    - backendRefs:
        - name: shilamurti-backend-service
          port: 80
